force-app/main/default/objects/TestesFisicosAntropometricos__c/TestesFisicosAntropometricos__c.object-meta.xml
<CustomObject>
    <label>Testes Físicos e Antropométricos</label>
    <nameField>
        <displayFormat>TFA-{0000}</displayFormat>
        <label>Nome de Testes Físicos e Antropométricos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testes Físicos e Antropométricos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>