force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Agilidade__c.field-meta.xml
<CustomField>
    <fullName>Agilidade__c</fullName>
    <label>Agilidade</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>