force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/AlturaBanco__c.field-meta.xml
<CustomField>
    <fullName>AlturaBanco__c</fullName>
    <label>Altura do Banco</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>