force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/AlturaSentado__c.field-meta.xml
<CustomField>
    <fullName>AlturaSentado__c</fullName>
    <label>Altura Sentado</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>