force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <label>Peso</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>