force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data do Teste</label>
    <type>Date</type>
</CustomField>