force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Envergadura__c.field-meta.xml
<CustomField>
    <fullName>Envergadura__c</fullName>
    <label>Envergadura</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>