force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Escola__c.field-meta.xml
<CustomField>
    <fullName>Escola__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escola</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Testes Físicos e Antropométricos</relationshipLabel>
    <relationshipName>TestesFisicosAntropometricos</relationshipName>
    <type>Lookup</type>
</CustomField>