force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Estatura__c.field-meta.xml
<CustomField>
    <fullName>Estatura__c</fullName>
    <label>Estatura</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>