force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/NumeroTeste_del__c.field-meta.xml
<CustomField>
    <fullName>NumeroTeste_del__c</fullName>
    <description>Nome do Teste.</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>Número do Teste</label>
    <type>AutoNumber</type>
</CustomField>