force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Treinador__c.field-meta.xml
<CustomField>
    <fullName>Treinador__c</fullName>
    <description>Nome Atualizado do Técnico.</description>
    <formula>Owner:User.Username</formula>
    <inlineHelpText>Nome Atualizado do Técnico, para esta turma.</inlineHelpText>
    <label>Treinador</label>
    <type>Text</type>
</CustomField>