force-app/main/default/objects/TestesFisicosAntropometricos__c/fields/Velocidade__c.field-meta.xml
<CustomField>
    <fullName>Velocidade__c</fullName>
    <label>Velocidade</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>